# Studying

./: CMakeLists.txt  HuffmanDecoder.java  HuffmanEncoder.java  HuffmanNode.java  HuffmanTree.java  Main.java  README.md  TestHuffman.java  basecommand.h  build.bat  commandmanager.h  main.cpp  methodwrapper.h  testclass.h  tests.cpp  tests.h  Прототип.java  Строитель.java  Фабричный метод.java
plugins/: abs.cpp  cos.cpp  ctg.cpp  deg.cpp  ln.cpp  log.cpp  rad.cpp  sin.cpp  tg.cpp
src/: base_func.h  calc_core.cpp  calc_core.h  errors.h  expr_parse.cpp  expr_parse.h  main.cpp  plug_load.cpp  plug_load.h
Введение/: Консольный ввод - вывод.java  Основы классов и объектов.java
Внутренние классы/: Вложенные (nested) классы.java  Внутренние (inner) классы.java
Интерфейсы и аннотации/: Аннотации.java  Интерфейсы.java
Исключения и ошибки/: Блок finally.java  Иерархия исключений и ошибок.java  Обработка нескольких исключений.java  Ошибки статической инициализации.java  Собственные исключения.java  Способы обработки исключений.java
Классы и методы/: Логические блоки.java  Методы с переменным числом параметров.java  Методы.java  Ограничение доступа.java  Параметризированные классы.java  Перегрузка методов.java  Перечисления.java  Статические методы и поля.java  модификатор final и неизменяемость.java
Наследование и полиморфизм/: "Переопределение" статических методов.java  Использование super и this.java  Класс Object.java  Классы и методы final.java  Наследование.java  Переопределение методов и полиморфизм.java
Потоки ввода и вывода/: Байтовые и символьные потоки ввода и вывода.java  Класс Scanner.java
Строки/: StringBuilder и StringBuffer.java  Класс String.java  Форматирование информации.java
Типы данных и операторы/: Документирование кода.java  Классы - оболочки.java  Массивы.java  Оператор выбора.java  Оператор условного перехода.java  Операторы.java  Типы данных и литераторы.java  Циклы.java
Функциональные интерфейсы/: Методы default и static в интерфейсах.java
